// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSumary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h1>
</div>
`;

exports[`should correctly render ExpensesSumary with many expense 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $123.45
  </h1>
</div>
`;
